--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,42 @@
 {
-  "name": "heimrichhannot/contao-filter-bundle",
-  "type": "contao-bundle",
-  "description": "A generic contao filter.",
-  "license": "LGPL-3.0+",
-  "require": {
-    "php": ">=5.6.0",
-    "contao/core-bundle": "^4.3.1"
-  },
-  "require-dev": {
-    "contao/manager-plugin": "^2.0",
-    "friendsofphp/php-cs-fixer": "^2.0",
-    "phpunit/phpunit": "^4.5",
-    "satooshi/php-coveralls": "^1.0",
-    "symfony/phpunit-bridge": "^2.8|^3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "HeimrichHannot\\FilterBundle\\": "src/"
+    "name": "heimrichhannot/contao-filter-bundle",
+    "type": "contao-bundle",
+    "description": "A generic contao filter.",
+    "license": "LGPL-3.0+",
+    "require": {
+        "php": "^7.1",
+        "contao/core-bundle": "^4.4"
     },
-    "classmap": [
-      "src/"
-    ],
-    "exclude-from-classmap": [
-      "src/Resources/contao/config/",
-      "src/Resources/contao/dca/",
-      "src/Resources/contao/languages/",
-      "src/Resources/contao/templates/"
-    ]
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "HeimrichHannot\\FilterBundle\\Test\\": "tests/"
+    "require-dev": {
+        "contao/test-case": "^1.1",
+        "contao/manager-plugin": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.2",
+        "phpunit/phpunit": "^5.6|^6.0",
+        "satooshi/php-coveralls": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "HeimrichHannot\\FilterBundle\\": "src/"
+        },
+        "classmap": [
+            "src/"
+        ],
+        "exclude-from-classmap": [
+            "src/Resources/contao/config/",
+            "src/Resources/contao/dca/",
+            "src/Resources/contao/languages/",
+            "src/Resources/contao/templates/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "HeimrichHannot\\FilterBundle\\Test\\": "tests/"
+        }
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "extra": {
+        "contao-manager-plugin": "HeimrichHannot\\FilterBundle\\ContaoManager\\Plugin"
     }
-  },
-  "config": {
-    "preferred-install": "dist"
-  },
-  "extra": {
-    "contao-manager-plugin": "HeimrichHannot\\FilterBundle\\ContaoManager\\Plugin"
-  }
 }
