--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "LGPL-3.0+",
     "require": {
         "php": "^7.1",
-        "contao/core-bundle": "^4.4"
+        "contao/manager-bundle": "^4.4"
     },
     "require-dev": {
         "contao/test-case": "^1.1",
