added initial type

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -25,6 +25,7 @@ huh:
       - {name: hidden, class: HeimrichHannot\FilterBundle\Filter\Type\HiddenType, type: other}
       - {name: checkbox, class: HeimrichHannot\FilterBundle\Filter\Type\CheckboxType, type: other}
       - {name: radio, class: HeimrichHannot\FilterBundle\Filter\Type\RadioType, type: other}
+      - {name: initial, class: HeimrichHannot\FilterBundle\Filter\Type\InitialType, type: other}
     templates:
       - {name: form_div_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_div_layout.html.twig'}
       - {name: form_table_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_table_layout.html.twig'}
