added date filter

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -26,6 +26,7 @@ huh:
       - {name: checkbox, class: HeimrichHannot\FilterBundle\Filter\Type\CheckboxType, type: other}
       - {name: radio, class: HeimrichHannot\FilterBundle\Filter\Type\RadioType, type: other}
       - {name: initial, class: HeimrichHannot\FilterBundle\Filter\Type\InitialType, type: other}
+      - {name: date, class: HeimrichHannot\FilterBundle\Filter\Type\DateType, type: date}
     templates:
       - {name: form_div_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_div_layout.html.twig'}
       - {name: form_table_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_table_layout.html.twig'}
