changed filter elements from array to FilterConfigElementModel

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -48,3 +48,7 @@ services:
         class: HeimrichHannot\FilterBundle\Choice\LocaleChoice
         arguments:
           - "@contao.framework"
+  huh.filter.choice.element:
+        class: HeimrichHannot\FilterBundle\Choice\ElementChoice
+        arguments:
+          - "@contao.framework"
