dropped form dependency

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "require": {
         "php": "^7.1",
         "contao/manager-bundle": "^4.4",
-        "heimrichhannot/contao-utils-bundle": "dev-master",
-        "symfony/form": "^4.0"
+        "heimrichhannot/contao-utils-bundle": "dev-master"
     },
     "require-dev": {
         "contao/test-case": "^1.1",
