added date, time and datetime picker with rangeselector

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -26,7 +26,9 @@ huh:
       - {name: checkbox, class: HeimrichHannot\FilterBundle\Filter\Type\CheckboxType, type: other}
       - {name: radio, class: HeimrichHannot\FilterBundle\Filter\Type\RadioType, type: other}
       - {name: initial, class: HeimrichHannot\FilterBundle\Filter\Type\InitialType, type: other}
+      - {name: date_time, class: HeimrichHannot\FilterBundle\Filter\Type\DateTimeType, type: date}
       - {name: date, class: HeimrichHannot\FilterBundle\Filter\Type\DateType, type: date}
+      - {name: time, class: HeimrichHannot\FilterBundle\Filter\Type\TimeType, type: date}
       - {name: date_range, class: HeimrichHannot\FilterBundle\Filter\Type\DateRangeType, type: date, wrapper: true}
     templates:
       - {name: form_div_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_div_layout.html.twig'}
