refactoring, added published filter

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -32,6 +32,7 @@ services:
       - "@contao.framework"
       - "@doctrine.dbal.default_connection"
   huh.filter.backend.filter_config_element:
+    public: true
     class: HeimrichHannot\FilterBundle\Backend\FilterConfigElement
 
   # choices
