added twig/extensions dependency

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "contao/manager-bundle": "^4.4",
         "heimrichhannot/contao-utils-bundle": "dev-master",
         "heimrichhannot/contao-multi_column_editor": "^1.4",
-        "codefog/contao-haste": "^4.18"
+        "codefog/contao-haste": "^4.18",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "contao/test-case": "^1.1",
