--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "contao/test-case": "^1.1",
         "contao/manager-plugin": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.2",
-        "phpunit/phpunit": "^5.6|^6.0",
+        "phpunit/phpunit": "^6.5",
         "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
