dropped contao/manager-bundle dependency, use contao/core-bundle instead

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "LGPL-3.0-or-later",
     "require": {
         "php": "^7.1",
-        "contao/manager-bundle": "^4.4",
+        "contao/core-bundle": "^4.4",
         "heimrichhannot/contao-utils-bundle": "^1.0",
         "heimrichhannot/contao-multi_column_editor": "^1.4",
         "codefog/contao-haste": "^4.18",
