--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,54 @@
 {
-    "name": "heimrichhannot/contao-filter-bundle",
-    "type": "contao-bundle",
-    "description": "A generic contao filter.",
-    "license": "LGPL-3.0-or-later",
-    "require": {
-        "php": "^7.1",
-        "contao/core-bundle": "^4.4",
-        "heimrichhannot/contao-utils-bundle": "^1.0",
-        "heimrichhannot/contao-multi_column_editor": "^1.4",
-        "codefog/contao-haste": "^4.18",
-        "twig/extensions": "^1.5"
+  "name": "heimrichhannot/contao-filter-bundle",
+  "type": "contao-bundle",
+  "description": "A generic contao filter.",
+  "license": "LGPL-3.0-or-later",
+  "require": {
+    "php": "^7.1",
+    "contao/core-bundle": "^4.4",
+    "symfony/framework-bundle": "^3.4",
+    "heimrichhannot/contao-utils-bundle": "^1.0",
+    "heimrichhannot/contao-multi_column_editor": "^1.4",
+    "codefog/contao-haste": "^4.18",
+    "twig/extensions": "^1.5"
+  },
+  "require-dev": {
+    "contao/test-case": "^1.1",
+    "contao/manager-plugin": "^2.0",
+    "friendsofphp/php-cs-fixer": "^2.2",
+    "phpunit/phpunit": "^6.5",
+    "php-http/guzzle6-adapter": "^1.1",
+    "php-http/message-factory": "^1.0.2",
+    "satooshi/php-coveralls": "^1.0",
+    "symfony/phpunit-bridge": "^3.2"
+  },
+  "conflict": {
+    "contao/core": "*",
+    "contao/manager-plugin": "<2.0 || >=3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "HeimrichHannot\\FilterBundle\\": "src/"
     },
-    "require-dev": {
-        "contao/test-case": "^1.1",
-        "contao/manager-plugin": "^2.0",
-        "friendsofphp/php-cs-fixer": "^2.2",
-        "phpunit/phpunit": "^6.5",
-        "satooshi/php-coveralls": "^1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "HeimrichHannot\\FilterBundle\\": "src/"
-        },
-        "classmap": [
-            "src/"
-        ],
-        "exclude-from-classmap": [
-            "src/Resources/contao/config/",
-            "src/Resources/contao/dca/",
-            "src/Resources/contao/languages/",
-            "src/Resources/contao/templates/"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "HeimrichHannot\\FilterBundle\\Test\\": "tests/"
-        }
-    },
-    "config": {
-        "preferred-install": "dist"
-    },
-    "extra": {
-        "contao-manager-plugin": "HeimrichHannot\\FilterBundle\\ContaoManager\\Plugin"
+    "classmap": [
+      "src/"
+    ],
+    "exclude-from-classmap": [
+      "src/Resources/contao/config/",
+      "src/Resources/contao/dca/",
+      "src/Resources/contao/languages/",
+      "src/Resources/contao/templates/"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "HeimrichHannot\\FilterBundle\\Test\\": "tests/"
     }
+  },
+  "config": {
+    "preferred-install": "dist"
+  },
+  "extra": {
+    "contao-manager-plugin": "HeimrichHannot\\FilterBundle\\ContaoManager\\Plugin"
+  }
 }
