--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "php-http/guzzle6-adapter": "^1.1",
     "php-http/message-factory": "^1.0.2",
     "satooshi/php-coveralls": "^2.0",
-    "symfony/phpunit-bridge": "^3.2"
+    "symfony/phpunit-bridge": "^3.2",
+    "symfony/form": "~3.4|~4.0"
   },
   "conflict": {
     "contao/core": "*",
