--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "contao/manager-plugin": "^2.0",
     "friendsofphp/php-cs-fixer": "^2.2",
     "phpunit/phpunit": "^6.1",
+    "phpunit/phpunit-mock-objects": "^5.0",
     "php-http/guzzle6-adapter": "^1.1",
     "php-http/message-factory": "^1.0.2",
     "satooshi/php-coveralls": "^2.0",
