--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "contao/manager-plugin": "^2.0",
     "friendsofphp/php-cs-fixer": "^2.2",
     "phpunit/phpunit": "^6.1",
-    "phpunit/phpunit-mock-objects": "^5.0",
+    "phpunit/phpunit-mock-objects": "^4.0|^5.0",
     "phpunit/php-token-stream": "^1.4|^2.0|^3.0",
     "php-http/guzzle6-adapter": "^1.1",
     "php-http/message-factory": "^1.0.2",
