--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,17 @@ matrix:
   include:
     # Latest dependencies with all PHP versions
     - php: 7.1
+      env: CONTAO_VERSION='4.4.*'
     - php: 7.2
+      env: CONTAO_VERSION='4.4.*'
+    - php: 7.1
+      env: CONTAO_VERSION='4.5.*'
+    - php: 7.2
+      env: CONTAO_VERSION='4.5.*'
 
     # Generate the coverage with the latest PHP version
     - php: 7.2
-      env: COVERAGE='--exclude-group contao3 --coverage-clover build/logs/clover.xml'
+      env: CONTAO_VERSION='4.5.*' COVERAGE='--exclude-group contao3 --coverage-clover build/logs/clover.xml'
 
     # Lowest dependencies with the oldest and latest PHP versions
     - php: 7.1
@@ -29,6 +35,9 @@ matrix:
     - php: 7.2
       env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable' SYMFONY_DEPRECATIONS_HELPER='weak_vendors'
   fast_finish: true
+
+before_install:
+  - if [[ ! $COVERAGE ]]; then phpenv config-rm xdebug.ini || true; fi
 
 install:
   - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --no-interaction --quiet; fi
