--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,9 @@ matrix:
 
     # Lowest dependencies with the oldest and latest PHP versions
     - php: 7.1
-      env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable' SYMFONY_DEPRECATIONS_HELPER='weak_vendors'
+      env: CONTAO_VERSION='4.4.*' COMPOSER_FLAGS='--prefer-lowest --prefer-stable' SYMFONY_DEPRECATIONS_HELPER='weak_vendors'
     - php: 7.2
-      env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable' SYMFONY_DEPRECATIONS_HELPER='weak_vendors'
+      env: CONTAO_VERSION='4.4.*' COMPOSER_FLAGS='--prefer-lowest --prefer-stable' SYMFONY_DEPRECATIONS_HELPER='weak_vendors'
   fast_finish: true
 
 before_install:
