--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,11 @@
     "contao/test-case": "^1.1",
     "contao/manager-plugin": "^2.0",
     "friendsofphp/php-cs-fixer": "^2.2",
-    "phpunit/phpunit": "^6.5",
-    "phpunit/phpunit-mock-objects": "^4.0|^5.0",
-    "phpunit/php-token-stream": "^1.4|^2.0|^3.0",
+    "phpunit/phpunit": ">=6.0 <6.5",
     "php-http/guzzle6-adapter": "^1.1",
     "php-http/message-factory": "^1.0.2",
-    "satooshi/php-coveralls": "^2.0",
-    "symfony/phpunit-bridge": "^3.2",
+    "php-coveralls/php-coveralls": "^2.0",
+    "symfony/phpunit-bridge": "^3.2"
     "symfony/form": "~3.4|~4.0"
   },
   "conflict": {
@@ -40,7 +38,8 @@
       "src/Resources/contao/config/",
       "src/Resources/contao/dca/",
       "src/Resources/contao/languages/",
-      "src/Resources/contao/templates/"
+      "src/Resources/contao/templates/",
+      "doc"
     ]
   },
   "autoload-dev": {
