--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,7 +18,7 @@
 
     <testsuites>
         <testsuite name="Unit Tests">
-            <directory>./tests</directory>
+            <directory>./tests/Session</directory>
         </testsuite>
     </testsuites>
 
