--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -20,7 +20,7 @@ huh:
       - {name: language, class: HeimrichHannot\FilterBundle\Filter\Type\LanguageType, type: choice}
       - {name: locale, class: HeimrichHannot\FilterBundle\Filter\Type\LocaleType, type: choice}
       - {name: parent, class: HeimrichHannot\FilterBundle\Filter\Type\ParentType, type: choice}
-      - {name: visible, class: HeimrichHannot\FilterBundle\Filter\Type\PublishedType, type: choice}
+      - {name: visible, class: HeimrichHannot\FilterBundle\Filter\Type\PublishedType, type: other}
       - {name: button, class: HeimrichHannot\FilterBundle\Filter\Type\ButtonType, type: button}
       - {name: reset, class: HeimrichHannot\FilterBundle\Filter\Type\ResetType, type: button}
       - {name: submit, class: HeimrichHannot\FilterBundle\Filter\Type\SubmitType, type: button}
