--- a/src/Resources/config/routing.yml
+++ b/src/Resources/config/routing.yml
@@ -1,6 +1,3 @@
 huh_filter:
-    path: /_filter
-    defaults:
-        _scope: frontend
-        _token_check: true
-        _controller: "HeimrichHannotFilterBundle:Frontend:submit"
+  resource: "@HeimrichHannotContaoFilterBundle/Controller/"
+  type: annotation
