--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "heimrichhannot/contao-utils-bundle": "^2.0",
     "heimrichhannot/contao-multi_column_editor": "^1.4",
     "codefog/contao-haste": "^4.18",
-    "twig/extensions": "^1.5"
+    "twig/extensions": "^1.5",
+    "urodoz/truncate-html": "^1.0"
   },
   "require-dev": {
     "contao/test-case": "^1.1",
