twig extension fix

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -75,3 +75,29 @@ services:
     public: true
     arguments:
       - "@contao.framework"
+  twig.extension.text:
+      class: Twig_Extensions_Extension_Text
+      tags:
+        - { name: twig.extension }
+  twig.extension.intl:
+      class: Twig_Extensions_Extension_Intl
+      tags:
+        - { name: twig.extension }
+  twig.extension.array:
+      class: Twig_Extensions_Extension_Array
+      tags:
+        - { name: twig.extension }
+  twig.extension.date:
+      class: Twig_Extensions_Extension_Date
+      arguments:
+      - "@translator"
+      tags:
+      - { name: twig.extension }
+  twig.truncate.html.service:
+      class: Urodoz\Truncate\TruncateService
+  twig.extension.truncate.html:
+      class: Urodoz\Truncate\Bridge\Twig\TruncateExtension
+      arguments:
+        -  "@twig.truncate.html.service"
+      tags:
+        - { name: twig.extension }
