--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -33,6 +33,7 @@ huh:
       - {name: date_range, class: HeimrichHannot\FilterBundle\Filter\Type\DateRangeType, type: date, wrapper: true}
       - {name: sql, class: HeimrichHannot\FilterBundle\Filter\Type\SqlType, type: other}
       - {name: auto_item, class: HeimrichHannot\FilterBundle\Filter\Type\AutoItemType, type: other}
+      - {name: sort, class: HeimrichHannot\FilterBundle\Filter\Type\SortType, type: sort}
     templates:
       - {name: form_div_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_div_layout.html.twig'}
       - {name: form_table_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_table_layout.html.twig'}
@@ -43,3 +44,12 @@ huh:
       - {name: foundation_5_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_foundation_5_layout.html.twig'}
     template_prefixes:
       - filter_
+  sort:
+    types:
+      - {name: submit, class: HeimrichHannot\FilterBundle\Filter\Type\SubmitType, type: button}
+      - {name: sort, class: HeimrichHannot\FilterBundle\Filter\Type\SortType, type: sort}
+    directions:
+      - {value: DESC}
+      - {value: ASC}
+    classes:
+      - {name: basic, class: HeimrichHannot\FilterBundle\Sort\BasicSort}
