added latest as inital setting for year choice, added inital value type callback, updated tests

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -110,3 +110,8 @@ services:
     public: true
     arguments:
       - "@contao.framework"
+
+# EventListener
+
+  huh.filter.listener.dca.callback.filterconfigelement:
+    class: HeimrichHannot\FilterBundle\EventListener\FilterConfigElementCallbackListener
