--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "symfony/framework-bundle": "^3.4",
     "heimrichhannot/contao-utils-bundle": "^2.0",
     "heimrichhannot/contao-multi-column-editor-bundle": "^1.0",
+    "heimrichhannot/contao-fieldpalette-bundle": "^0.2",
     "codefog/contao-haste": "^4.18",
     "twig/extensions": "^1.5",
     "urodoz/truncate-html": "^1.0"
