added {{filter_reset_url::*::*}} insert tag and features to README.md

--- a/src/Resources/config/listener.yml
+++ b/src/Resources/config/listener.yml
@@ -1,3 +1,7 @@
 services:
   huh.filter.listener.dca.callback.filterconfigelement:
     class: HeimrichHannot\FilterBundle\EventListener\FilterConfigElementCallbackListener
+  huh.filter.listener.inserttag:
+    class: HeimrichHannot\FilterBundle\EventListener\InsertTagsListener
+    arguments:
+      - "@contao.framework"
