--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -24,15 +24,9 @@ services:
     shared: false
     public: true
     arguments:
+      - "@service_container"
       - "@contao.framework"
       - "@huh.filter.session"
-      - "@huh.filter.query_builder"
-  huh.filter.query_builder:
-    class: HeimrichHannot\FilterBundle\QueryBuilder\FilterQueryBuilder
-    shared: false
-    public: false
-    arguments:
-      - "@contao.framework"
       - "@doctrine.dbal.default_connection"
   huh.filter.backend.filter_config_element:
     public: true
