--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "heimrichhannot/contao-fieldpalette-bundle": ">=0.2 <2.0-dev ",
     "codefog/contao-haste": "^4.18",
     "twig/extensions": "^1.5",
-    "dzango/twig-truncate-extension": "~1.0",
+    "heimrichhannot/truncate-html": "^1.0",
     "symfony/form": "~3.4|~4.0"
   },
   "require-dev": {
