--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -3,22 +3,26 @@ services:
     class: HeimrichHannot\FilterBundle\Form\Extension\FormTypeExtension
     tags:
     - {name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType}
+
   huh.form_button_extension:
     class: HeimrichHannot\FilterBundle\Form\Extension\FormButtonExtension
     tags:
     - {name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\ButtonType}
+
   huh.filter.manager:
     class: HeimrichHannot\FilterBundle\Manager\FilterManager
     public: true
     arguments:
     - "@contao.framework"
     - "@huh.filter.session"
+
   huh.filter.session:
     class: HeimrichHannot\FilterBundle\Session\FilterSession
     public: true
     arguments:
     - "@contao.framework"
     - "@session"
+
   huh.filter.config:
     class: HeimrichHannot\FilterBundle\Config\FilterConfig
     shared: false
@@ -28,101 +32,127 @@ services:
     - "@contao.framework"
     - "@huh.filter.session"
     - "@doctrine.dbal.default_connection"
+
   huh.filter.backend.filter_config_element:
     public: true
     class: HeimrichHannot\FilterBundle\Backend\FilterConfigElement
     arguments:
     - "@contao.framework"
+
   huh.filter.backend.content:
     public: true
     class: HeimrichHannot\FilterBundle\Backend\Content
     arguments:
     - "@contao.framework"
+
   huh.filter.backend.filter_preselect:
     public: true
     class: HeimrichHannot\FilterBundle\Backend\FilterPreselect
     arguments:
     - "@contao.framework"
+
   # choices
   huh.filter.choice.template:
     class: HeimrichHannot\FilterBundle\Choice\TemplateChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.type:
     class: HeimrichHannot\FilterBundle\Choice\TypeChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.field_options:
     class: HeimrichHannot\FilterBundle\Choice\FieldOptionsChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.country:
     class: HeimrichHannot\FilterBundle\Choice\CountryChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.date:
     class: HeimrichHannot\FilterBundle\Choice\DateChoice
     public: true
     arguments: ['@contao.framework', '@huh.utils.model']
+
   huh.filter.choice.language:
     class: HeimrichHannot\FilterBundle\Choice\LanguageChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.locale:
     class: HeimrichHannot\FilterBundle\Choice\LocaleChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.element:
     class: HeimrichHannot\FilterBundle\Choice\ElementChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.choice.year:
     class: HeimrichHannot\FilterBundle\Choice\YearChoice
     public: true
     arguments: ['@contao.framework', '@huh.utils.model']
+
   twig.extension.text:
     class: Twig_Extensions_Extension_Text
     tags:
     - { name: twig.extension }
+
   twig.extension.intl:
     class: Twig_Extensions_Extension_Intl
     tags:
     - { name: twig.extension }
+
   twig.extension.array:
     class: Twig_Extensions_Extension_Array
     tags:
     - { name: twig.extension }
+
   twig.extension.date:
     class: Twig_Extensions_Extension_Date
     arguments:
     - "@translator"
     tags:
     - { name: twig.extension }
-  dzango.twig.truncate_extension:
-    class: Dzango\Twig\Extension\Truncate
-    tags:
-    - { name: twig.extension }
+
   huh.filter.choice.sort:
     class: HeimrichHannot\FilterBundle\Choice\SortChoice
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.util.filter_config_element:
     class: HeimrichHannot\FilterBundle\Util\FilterConfigElementUtil
     public: true
     arguments:
     - "@contao.framework"
+
   huh.filter.util.filter_preselect:
     class: HeimrichHannot\FilterBundle\Util\FilterPreselectUtil
     public: true
     arguments:
     - "@contao.framework"
+
+  twig.truncate.service:
+    class: Urodoz\Truncate\TruncateService
+
+  twig.extension.truncate.html:
+    class: Urodoz\Truncate\Bridge\Twig\TruncateExtension
+    arguments:
+    - "@twig.truncate.service"
+    tags:
+    - { name: twig.extension }
+
   # Symfony 4 autowire convention fix (ambiguous namespace alias)
   HeimrichHannot\FilterBundle\Util\FilterPreselectUtil: '@huh.filter.util.filter_preselect'
