--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -33,7 +33,7 @@ huh:
       - {name: time, class: HeimrichHannot\FilterBundle\Filter\Type\TimeType, type: date}
       - {name: date_range, class: HeimrichHannot\FilterBundle\Filter\Type\DateRangeType, type: date, wrapper: true}
       - {name: year, class: HeimrichHannot\FilterBundle\Filter\Type\YearType, type: date}
-      - {name: date_choice, class: HeimrichHannot\FilterBundle\Filter\Type\DateChoiceType, type: date}
+      - {name: date_choice, class: HeimrichHannot\FilterBundle\Filter\Type\DateChoiceType, type: choice}
       - {name: sql, class: HeimrichHannot\FilterBundle\Filter\Type\SqlType, type: other}
       - {name: auto_item, class: HeimrichHannot\FilterBundle\Filter\Type\AutoItemType, type: other}
       - {name: sort, class: HeimrichHannot\FilterBundle\Filter\Type\SortType, type: sort}
