--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "codefog/contao-haste": "^4.18",
     "twig/extensions": "^1.5",
     "heimrichhannot/truncate-html": "^1.0",
-    "symfony/form": "~3.4|~4.0"
+    "symfony/form": "~3.4|~4.0",
+    "ext-pdo": "*"
   },
   "require-dev": {
     "heimrichhannot/contao-test-utilities-bundle": "dev-master",
