--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "symfony/framework-bundle": "^3.4",
     "heimrichhannot/contao-utils-bundle": "^2.0",
     "heimrichhannot/contao-multi-column-editor-bundle": "^2.0",
-    "heimrichhannot/contao-fieldpalette-bundle": ">=0.2 <2.0-dev ",
+    "heimrichhannot/contao-fieldpalette-bundle": ">=0.2 <2.0-dev",
+    "heimrichhannot/contao-entity-filter-bundle": "^1.5",
     "codefog/contao-haste": "^4.18",
     "twig/extensions": "^1.5",
     "heimrichhannot/truncate-html": "^1.0",
